@@ -6,6 +6,7 @@ import org.springframework.dao.InvalidDataAccessResourceUsageException;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.booking.model.Booking;
 import ru.practicum.shareit.booking.repository.BookingRepository;
+import ru.practicum.shareit.booking.service.BookingService;
 import ru.practicum.shareit.comment.dto.CommentDto;
 import ru.practicum.shareit.comment.dto.CommentMapper;
 import ru.practicum.shareit.comment.model.Comment;
@@ -15,12 +16,12 @@ import ru.practicum.shareit.exception.ObjectNotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemMapper;
 import ru.practicum.shareit.exception.ObjectsDbException;
-import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -36,42 +37,43 @@ public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
     private final BookingRepository bookingRepository;
     private final CommentRepository commentRepository;
+    private final BookingService bookingService;
     private static final ItemMapper itemMapper = ItemMapper.INSTANCE;
     private static final CommentMapper commentMapper = CommentMapper.INSTANCE;
 
     @Override
-    public Item addItem(ItemDto itemDto, long ownerId, boolean isOwnerExist) {
+    public ItemDto addItem(ItemDto itemDto, long ownerId, boolean isOwnerExist) {
         log.debug("+ItemServiceImpl - addItem: " + itemDto + ". ownerId = " + ownerId);
         itemDto.setOwner(userRepository.findById(ownerId)
                 .orElseThrow(() ->  new ObjectNotFoundException("ownerId не найден")));
-        Item item = itemRepository.save(itemMapper.itemDtoToItem(itemDto));
+        ItemDto item = itemMapper.itemToItemDto(itemRepository.save(itemMapper.itemDtoToItem(itemDto)));
         log.debug("-ItemServiceImpl - addItem: " + item);
         return item;
 
    }
 
     @Override
-    public List<Item> getAllItemsByOwnerId(long ownerId) {
-        log.debug("+ItemServiceImpl - getAllItems: ownerId = " + ownerId);
-        List<Item> items = itemRepository.findByOwnerId(ownerId)
+    public List<ItemDto> getAllItemsByOwnerId(long ownerId) {
+        log.debug("+ItemServiceImpl - getAllItemsByOwnerId: ownerId = " + ownerId);
+        List<ItemDto> allItemsByOwnerId = itemRepository.findByOwnerId(ownerId)
                 .stream()
+                .map(itemMapper::itemToItemDto)
                 .collect(toList());
-//        List<ItemDtoWithBookingAndComments> items = itemRepository.findByOwnerId(ownerId)
-//                .stream()
-//                .map(itemMapper::itemToItemDtoById)
-//                .map(i -> setBookingToItem(i, ownerId))
-//                .map(this::setCommentsToItem)
-//                .collect(toList());
-        log.debug("-ItemServiceImpl - getAllItems: " + items);
-        return items;
+
+        List<ItemDto> itemsDto = new ArrayList<>();
+        allItemsByOwnerId.forEach(i -> {
+            itemsDto.add(setCommentsAndBooking(i, ownerId));
+        });
+        log.debug("-ItemServiceImpl - getAllItemsByOwnerId: " + itemsDto);
+        return itemsDto;
     }
 
     @Override
-    public Item updateItem(ItemDto itemDto, long ownerId, long itemId) {
+    public ItemDto updateItem(ItemDto itemDto, long ownerId, long itemId) {
         log.debug("+ItemServiceImpl - updateItem: " + itemDto + ". ownerId = " + ownerId + ". itemId = " + itemId);
 
-        Item updatedItem = itemRepository.findById(itemId).orElseThrow(
-                    () -> new ObjectsDbException("Вещи с itemId = " + itemId + " нет"));
+        ItemDto updatedItem = itemMapper.itemToItemDto(itemRepository.findById(itemId).orElseThrow(
+                () -> new ObjectsDbException("Вещи с itemId = " + itemId + " нет")));
 
         if (updatedItem.getOwner().getId() != ownerId) {
             throw new ObjectsDbException("Нельзя менять владельца, актуальный ownerId = " + updatedItem.getOwner()
@@ -85,39 +87,40 @@ public class ItemServiceImpl implements ItemService {
         updatedItem.setOwner(userRepository.findById(ownerId)
                 .orElseThrow(() ->  new ObjectNotFoundException("ownerId не найден")));
 
-        updatedItem = itemRepository.save(updatedItem);
+        updatedItem = itemMapper.itemToItemDto(itemRepository.save(itemMapper.itemDtoToItem(updatedItem)));
 
         log.debug("-ItemServiceImpl - updateItem: " + updatedItem);
         return updatedItem;
     }
 
     @Override
-    public Item getItemById(long itemId, long ownerId) {
+    public ItemDto getItemById(long itemId, long ownerId) {
         log.debug("+ItemServiceImpl - getItemById: itemId = " + itemId);
-        Item item = itemRepository.findById(itemId).orElseThrow(
-                () -> new ObjectNotFoundException("itemId = " + itemId + " not found"));
+        ItemDto item = itemMapper.itemToItemDto(itemRepository.findById(itemId).orElseThrow(
+                () -> new ObjectNotFoundException("itemId = " + itemId + " not found")));
         log.debug("-ItemServiceImpl - getItemById: " + item);
-        return item;
+        return setCommentsAndBooking(item, ownerId);
     }
 
     @Override
-    public List<Item> searchItems(String searchText) {
+    public List<ItemDto> searchItems(String searchText) {
         log.debug("+ItemServiceImpl - searchItems: searchText = " + searchText);
         if (!searchText.isEmpty()) {
-            List<Item> items = itemRepository
+            List<ItemDto> items = itemRepository
                     .findAllByNameOrDescriptionContainingIgnoreCaseAndAvailableIsTrue(searchText, searchText)
                     .stream()
+                    .map(itemMapper::itemToItemDto)
                     .collect(toList());
             log.debug("-ItemServiceImpl - searchItems: " + items);
             return items;
         } else {
             log.debug("-ItemServiceImpl - searchItems: not found");
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
     @Override
-    public Comment addComment(CommentDto commentDto, long userId, long itemId) {
+    public CommentDto addComment(CommentDto commentDto, long userId, long itemId) {
         log.debug("+ItemServiceImpl - addComment: comment = " + commentDto + ", ownerId = " + userId + ", itemId = "
                 + itemId);
         log.debug("ItemServiceImpl - addComment: " + LocalDateTime.now());
@@ -144,7 +147,7 @@ public class ItemServiceImpl implements ItemService {
         comment.setAuthorName(author.getName());
 
         log.debug("ItemServiceImpl - addComment: comment = " + comment);
-        Comment answer = commentRepository.save(comment);
+        CommentDto answer = commentMapper.commentToCommentDto(commentRepository.save(comment));
         log.debug("-ItemServiceImpl - addComment: answer = " + answer);
         return answer;
     }
@@ -154,7 +157,9 @@ public class ItemServiceImpl implements ItemService {
         log.debug("+ItemServiceImpl - setCommentsToItem: ItemDtoWithBooking = " + item);
         List<Comment> comments = Collections.emptyList();
         try {
-            comments = commentRepository.findByItemId(item.getId()).toList();
+            comments = commentRepository.findByItemId(item.getId())
+                    .stream()
+                    .collect(toList());
         } catch (InvalidDataAccessResourceUsageException e) {
             log.debug("ItemServiceImpl - setCommentsToItem: no comments");
         }
@@ -162,5 +167,10 @@ public class ItemServiceImpl implements ItemService {
         return comments;
     }
 
-
+    private ItemDto setCommentsAndBooking(ItemDto itemDto, long ownerId) {
+        itemDto.setComments(getCommentsToItem(itemDto));
+        itemDto.setLastBooking(bookingService.getLastBooking(itemDto, ownerId));
+        itemDto.setNextBooking(bookingService.getNextBooking(itemDto, ownerId));
+        return itemDto;
+    }
 }
